// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JHipster OpenAPI Client Sub Generator Spring: microservice petstore custom endpoint  should match files snapshot 1`] = `
Object {
  ".openapi-generator-ignore": Object {
    "contents": "pom.xml
README.md
package.json
",
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "contents": "{
  \\"generator-jhipster\\": {
    \\"applicationType\\": \\"microservice\\",
    \\"baseName\\": \\"sampleOpenApiClient\\",
    \\"packageName\\": \\"com.mycompany.myapp\\",
    \\"packageFolder\\": \\"com/mycompany/myapp\\",
    \\"serverPort\\": \\"8081\\",
    \\"authenticationType\\": \\"jwt\\",
    \\"cacheProvider\\": \\"ehcache\\",
    \\"enableHibernateCache\\": true,
    \\"websocket\\": false,
    \\"databaseType\\": \\"sql\\",
    \\"devDatabaseType\\": \\"h2Memory\\",
    \\"prodDatabaseType\\": \\"mysql\\",
    \\"searchEngine\\": false,
    \\"messageBroker\\": false,
    \\"serviceDiscoveryType\\": \\"consul\\",
    \\"buildTool\\": \\"maven\\",
    \\"enableSwaggerCodegen\\": true,
    \\"jwtSecretKey\\": \\"Y2Q4NzYwMzEwMzNiZTExYzI1Y2E2Yjg2MGViNjRjMGE2YjcwNTEzY2ZkMDgxNTYwNTUxZWJjMzJhYjUwY2JiOTBiNjk3YWExMWRiNWM0MDljOTJhN2M2ODBkZDY5MjQ4MTVhYmUyZGUwYjFiODE1YmFhMTE0MjY2NDRiZDI5NDI=\\",
    \\"testFrameworks\\": [],
    \\"enableTranslation\\": false,
    \\"skipClient\\": true,
    \\"skipUserManagement\\": true
  }
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`JHipster OpenAPI Client Sub Generator Spring: microservice petstore regenerate  should match files snapshot 1`] = `
Object {
  ".openapi-generator-ignore": Object {
    "contents": "pom.xml
README.md
package.json
",
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "contents": "{
  \\"generator-jhipster\\": {
    \\"applicationType\\": \\"microservice\\",
    \\"baseName\\": \\"sampleOpenApiClient\\",
    \\"packageName\\": \\"com.mycompany.myapp\\",
    \\"packageFolder\\": \\"com/mycompany/myapp\\",
    \\"serverPort\\": \\"8081\\",
    \\"authenticationType\\": \\"jwt\\",
    \\"cacheProvider\\": \\"ehcache\\",
    \\"enableHibernateCache\\": true,
    \\"websocket\\": false,
    \\"databaseType\\": \\"sql\\",
    \\"devDatabaseType\\": \\"h2Memory\\",
    \\"prodDatabaseType\\": \\"mysql\\",
    \\"searchEngine\\": false,
    \\"messageBroker\\": false,
    \\"serviceDiscoveryType\\": \\"consul\\",
    \\"buildTool\\": \\"maven\\",
    \\"enableSwaggerCodegen\\": true,
    \\"jwtSecretKey\\": \\"Y2Q4NzYwMzEwMzNiZTExYzI1Y2E2Yjg2MGViNjRjMGE2YjcwNTEzY2ZkMDgxNTYwNTUxZWJjMzJhYjUwY2JiOTBiNjk3YWExMWRiNWM0MDljOTJhN2M2ODBkZDY5MjQ4MTVhYmUyZGUwYjFiODE1YmFhMTE0MjY2NDRiZDI5NDI=\\",
    \\"testFrameworks\\": [],
    \\"enableTranslation\\": false,
    \\"skipClient\\": true,
    \\"skipUserManagement\\": true,
    \\"openApiClients\\": {
      \\"petstore\\": {
        \\"spec\\": \\"petstore-openapi-3.yml\\",
        \\"generatorName\\": \\"spring\\"
      }
    }
  }
}
",
    "stateCleared": "modified",
  },
}
`;
